# multirotor-lab

./: .gitignore  README.md  build_project.sh  pyproject.toml  setup.py
gym_multirotor/assets/: multirotor.urdf
gym_multirotor/envs/: base_drone_env.py  base_multirotor_env.py
gym_multirotor/tests/: test.py
pybullet_multirotor/: __init__.py
pybullet_multirotor/envs/: __init__.py  base_drone_env.py  base_drone_rl_env.py  control_drone_env.py  single_drone_rl_hover_env.py
pybullet_multirotor/examples/: learn.py  simple.py
pybullet_multirotor/tests/: test.py
