[tool.poetry]
name = "pybullet-multirotor"
version = "0.0.1"
description = "pybullet-multirotor"
authors = ["mayudong <mayudong200333@gmail.com>"]
packages = [
    { include = "pybullet_multirotor" }
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pybullet = "^3.2.5"
matplotlib = "^3.8.1"
gymnasium = "^0.29.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
